--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="card__info">
 					<div class="card__info--tag">Learning</div>
 					<p class="card__info--date">Published 21 Dec 2023</p>
-					<p class="card__info--name">HTML & CSS foundations</p>
+					<h1 class="card__info--name">HTML & CSS foundations</h1>
 					<p class="card__info--description">
 						These languages are the backbone of every website, defining
 						structure, content, and presentation.
